--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.djrapitops</groupId>
     <artifactId>Extension-Jobs</artifactId>
-    <version>4.13.1-R0.1</version>
+    <version>4.16.3-R0.1</version>
     <build>
         <plugins>
             <plugin>
@@ -28,8 +28,8 @@
 
     <repositories>
         <repository>
-            <id>plan-bintray</id>
-            <url>https://dl.bintray.com/rsl1122/Plan-repository/</url>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
 
         <!-- Platforms -->
@@ -50,21 +50,27 @@
         <!--<id>velocity-repo</id>-->
         <!--<url>https://repo.velocitypowered.com/snapshots/</url>-->
         <!--</repository>-->
+        <repository>
+            <id>plan-repo</id>
+            <url>https://repo.playeranalytics.net/releases</url>
+        </repository>
+
     </repositories>
 
     <dependencies>
         <dependency> <!-- Plan API -->
             <groupId>com.djrapitops</groupId>
-            <artifactId>Plan-api</artifactId>
-            <version>5.0-R0.2</version>
+            <artifactId>plan-api</artifactId>
+            <version>5.2-R0.1</version>
             <scope>provided</scope>
         </dependency>
 
+
         <!-- Plugin API Dependency -->
         <dependency>
-            <groupId>com.gamingmesh</groupId>
-            <artifactId>jobs</artifactId>
-            <version>4.13.1</version>
+            <groupId>com.github.Zrips</groupId>
+            <artifactId>Jobs</artifactId>
+            <version>4.16.3</version> <!-- Change the LATEST to the current version of jobs -->
             <scope>provided</scope>
         </dependency>
 
@@ -117,9 +123,8 @@
 
     <distributionManagement>
         <repository>
-            <id>bintray-rsl1122-Plan-repository</id>
-            <name>rsl1122-Plan-repository</name>
-            <url>https://api.bintray.com/maven/rsl1122/Plan-repository/Extension-Jobs/;publish=1</url>
+            <id>plan-repo</id>
+            <url>https://repo.playeranalytics.net/releases</url>
         </repository>
     </distributionManagement>
 
