--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.playeranalytics</groupId>
     <artifactId>Extension-Jobs</artifactId>
-    <version>4.16.3-R1.1</version>
+    <version>5.2.2.3-R1.0</version>
     <build>
         <plugins>
             <plugin>
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>com.github.Zrips</groupId>
             <artifactId>Jobs</artifactId>
-            <version>4.16.3</version> <!-- Change the LATEST to the current version of jobs -->
+            <version>v5.2.2.3</version>
             <scope>provided</scope>
         </dependency>
 
